--- a/style.css
+++ b/style.css
@@ -2,13 +2,13 @@
 
 * {
     margin: 0;
-    padding: 0; 
+    padding: 0;
  }
 
  html {
     background-color: #fff;
     color: rgba(5, 5, 5, 0.856);
-    text-rendering: optimizeLegibility;
+    /* text-rendering: optimizeLegibility; */
 }
 
  header{   
@@ -596,9 +596,9 @@ h1{
 /* butoni per burger menu per me e pa komentojme display:none */
 .toggle-button {
     position: absolute;
-    top: .75rem;
+    top: 0.75rem;
     right: 1rem;
-    /* display: none; */
+    display: none;
     flex-direction: column;
     justify-content: space-between;
     width: 30px;
@@ -615,13 +615,13 @@ h1{
 
 
 
-@media only screen and (min-width: 1200px) {
+@media only screen and (max-width: 1200px) {
 
     
     
 
 }
-@media only screen and (min-width: 992px) {
+@media only screen and (max-width: 992px) {
     
 
 
@@ -694,6 +694,10 @@ h1{
         flex-direction:column;
     }
 
+    .textone{
+        margin-top: -52%;
+    }
+
     .texttwo{
        padding-bottom: 15px;
        display: flex;
@@ -703,6 +707,7 @@ h1{
 
     .textthird{
         margin-top: -25%; 
+        margin-right: 40%;
     }
 
     .row{
@@ -711,12 +716,13 @@ h1{
 
     .burger-form{
         height:60%;
-        width:60%;
+        width:80%;
     }
 
     .tabasco{
-        height:40%;
-        width:40%;
+        height:50%;
+        width:60%;
+        margin-top: 18%;
     }
     
     /* .fries{
@@ -738,29 +744,30 @@ h1{
         text-shadow: white;
     }
 
+    .myform{
+        /* text-align: center; */
+    }
+
     .inpute{
-        font-size: 12px;
+        /* font-size: 12px;
         color: white;
-        margin: 5px;
+        margin: 5px; */
         padding: 5px;
+        /* margin-left: 15%; */
         
     }
 
     .btn3{
-        background-color: red;
-        font-family: Alfa Slab One;
-        font-size: 12px;
-        color: white;
+       
+        /* font-size: 12px;
         margin: 5px;
-        padding: 5px;
-        border: none;
-        text-align: center;
+        padding: 5px; */
     
     }
 
     .image-mamamia{
-        height:40%;
-        width:40%;
+        height:56%;
+        width:70%;
     }
 
     .image-one{
@@ -809,8 +816,8 @@ h1{
     }
 
     .mySlides{
-height:100px;
-width:250px;
+       height:100px;
+       width:250px;
     }
 
     .firstevent p{
@@ -822,18 +829,18 @@ width:250px;
     }
 
     .image-two{
-height:220px;
-width: 300px;
+      height:120%;
+      width: 100%;
     }
 
     .imgOne{
-height:220px;
-width: 300px;
+      height:120%;
+      width: 100%;
     }
 
     .imgTwo{
-        height:220px;
-        width: 300px;
+        height:120%;
+        width: 100%;
     }
 
 }
@@ -854,7 +861,7 @@ width: 300px;
 
     .logo{
         height: 7%;
-        width: 42%;
+        width: 30%;
         margin-top: -1%;
     }
 
@@ -883,13 +890,51 @@ width: 300px;
 
     .hero-text-box h5{
         padding:5px;
-        font-size: 10px;
+        font-size: 2%;
     }
     
     .hero-text-box h1{
-        font-size: 50px;
+        font-size: 35px;
+        padding-left: 37%;
         
     }
+
+    .image-one{
+        width: 220px;
+        height: 200px;
+         display: none; 
+    }
+
+    .kuqo{
+        display: none;
+        /* top:60%;
+        left:40%;
+        width: 50px;
+        height: 50px;
+        padding: 10px;
+        border-radius: 60%; */
+        
+    }
+    
+    .circle{
+        display: none;
+        /* outline: dashed 2px white;
+        width: 35px;
+        height: 35px;
+        border-radius: 50%;
+        padding: 10px; */
+    }
+    
+    .leku{
+        font-weight: 200;
+        font-size:100%;
+    }
+    
+    .leku2{
+        font-weight: 200;
+        font-size:100%;
+    }
+
 
     .foods{
         top:30%;
@@ -897,10 +942,12 @@ width: 300px;
         
     }
 
-    /* .food{
+     .food{
         width: 100%;
         height: 20%;
-    } */
+    } 
+
+    
 
     .title h3{
         font-size: 20px;
@@ -927,35 +974,87 @@ width: 300px;
 
    .burger-photo h2{
     font-size: 13px;
-    padding: 9px;
+    padding: 5px;
     
 }
 
     .burger-photo h4{
     font-size: 10px;
-    margin:10px;
+    margin: 5px;
    }
 
    .textone{
-    /* position: absolute;
-    margin-top: -25%;
-    color: #fff;
-    margin-left: 2%;
-    font-family: Bebas Neue;
-    font-size: 30px; */
+    margin-top: -46%;
+    font-size: 20px;
    }
    
+   .imgOne{
+    width: 90%;
+    height: 100%;
+   }
+
+
    .texttwo{
-       margin-top: -39%;
+       margin-top: -23%;
        margin-left: 5%;
        font-size: 20px;
    }
    
+    .imgTwo{
+        width: 90%;
+        height: 100%;
+    }
+
    .textthird{
-       margin-top: -39%;
+       margin-top: -23%;
        margin-left: 5%;
        font-size: 20px;
    }
+
+   .image-three{
+    width: 40%;
+    height: 30%;
+    margin-top: -13%;
+   }
+
+   .bigi{
+    width: 40%;
+    height: 30%;
+    margin-top: 5%;
+   }
+
+   .image-four{
+    width: 40%;
+    height: 30%;
+    margin-top: 5%;
+   }
+
+   .firstevent h2{
+    font-size: 15px;
+   }
+
+   .firstevent h1{
+    font-size: 20px;
+   }
+
+   .firstevent p{
+    font-size: 10px;
+   }
+
+   .burger-form{
+    display: none;
+   }
+
+   .tabasco{
+    display: none;
+   }
+
+   .firstpart{
+    margin-top: -10%;
+    margin-left: 15%;
+    margin-bottom: 5%;
+   }
+
 
    .form-title h4{
     padding-top:15px;
@@ -972,7 +1071,6 @@ width: 300px;
         font-size: 9px;
         margin: 10px;
         padding: 5px;
-        
     }
 
     .btn3{
@@ -1005,16 +1103,9 @@ width: 300px;
         font-size: 44%;  
     } 
 
-    
+    .image-mamamia{
+        display: none;
+    }
 
     
-
-
-
-
-
-
-
-
-
 }
